Release 2.41.1

Copyright (c) 1998-2010 Paulo Moura.        All Rights Reserved.
Logtalk is free software.  You can redistribute it and/or modify
it under the terms of the "Artistic License 2.0" as published by 
The Perl Foundation. Consult the "LICENSE.txt" file for details.
================================================================


RELEASE NOTES
=============


2.41.1 - October 6, 2010

    Added support for the blackboard built-in predicates (bb_put/2, bb_get/2,
    bb_delete/2, and bb_update/3) found on some Prolog compilers such as YAP
    and SICStus Prolog. Note that a Prolog compiler natively supporting these
    predicates is required. This support aims to facilitate porting of Prolog
    applications using the blackboard; these predicates should be avoided when
    writing portable Logtalk applications.

    Simplified the internal representation of entity prefixes and entity
    predicate functors. The new representation is also a bit more compact.

    Corrected an optimization bug in the compilation of grammar rules that
    resulted in failed compilations whenever the body of a grammar rule was
    equivalent to fail/0. Thanks to Ulrich Neumerkel for the bug report.

    Corrected an optimization bug in the compilation of grammar rules that
    resulted in incorrect compilations when folding pairs of consecutive
    variable unifications generated as a by-product of the translation of
    grammar rules into clauses. Thanks to Ulrich Neumerkel for the bug report.

    Corrected a bug in the table of ISO Prolog specified arithmetic functions
    that is used by the Logtalk compiler when checking arithmetic expressions
    for portability (wrong arity of the bitwise complement function).

    Corrected a bug in the compilation of calls to Prolog proprietary built-in
    meta-predicates that are redefined within an object or category.

    Corrected a race condition bug when running multi-threaded code compiled